# glue-qt-ai

./: README.md  pyproject.toml
glue_qt_ai/: __init__.py  client.py  plugin.py  server.py
glue_qt_llm_bridge/: __init__.py  plugin.py
